--- a/SAM2.ipynb
+++ b/SAM2.ipynb
@@ -495,7 +495,7 @@
       "gpuType": "T4",
       "include_colab_link": true
     },
-    "accelerator": "GPU",
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
